--- a/Client/VFS/Client.VFS.vcproj
+++ b/Client/VFS/Client.VFS.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Client.VFS"
 	ProjectGUID="{C6C1E900-B84F-42E7-B228-71B5EB574E80}"
 	RootNamespace="VFSModule"
@@ -48,6 +48,7 @@
 				RuntimeLibrary="3"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -60,8 +61,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlib.lib"
 				OutputFile="..\..\Binary\$(ProjectName).Debug.dll"
+				AdditionalLibraryDirectories=".\CEGUI\dependencies\zlib-1.2.5\projects\Debug"
 				GenerateDebugInformation="true"
 			/>
 			<Tool
@@ -120,6 +121,7 @@
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -132,8 +134,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlib.lib"
 				OutputFile="..\..\Binary\$(ProjectName).dll"
+				AdditionalLibraryDirectories=".\CEGUI\dependencies\zlib-1.2.5\projects\Release"
 			/>
 			<Tool
 				Name="VCALinkTool"
