Removed some debug logging. Added a message box for invalid chat window fonts. File check is now handled by the server instead of the client (Server can now return 0 in the playerModifiedGameFiles to allow clients with modified game files). Modified CGUI::DrawText to use our custom String class for text and font. Cleaned up the CFPSCounter class. Cleaned up the CGUI class. Added SharedUtility::Set/GetClipboardText. Cleaned up the CGUI::GetFont function. Fixed CIVPadd::To/FromPadState. Fixed client name changes whilst connected to a server. Fixed my previous commit for the CQuery fix. CPadState class is now used instead of the NetPadState class. Fixed iv pause menu detection. Added getPlayerPreviousPadState to the client. Added new key sync code. Added new player ped creation/deletion code. Local player model reference is now added for local CNetworkPlayer class. Fixed player name tag drawing. Added CContextDataManager class to handle player ped context changes.

--- a/Client/Core/Client.Core.vcproj
+++ b/Client/Core/Client.Core.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Client.Core"
 	ProjectGUID="{5DD209AC-1B5F-483A-BCA9-150CAD228C5A}"
 	RootNamespace="Client.Core"
@@ -283,6 +283,10 @@
 				</File>
 				<File
 					RelativePath=".\CClientTaskManager.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CContextDataManager.h"
 					>
 				</File>
 				<File
@@ -1060,6 +1064,10 @@
 				</File>
 				<File
 					RelativePath=".\CClientTaskManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\CContextDataManager.cpp"
 					>
 				</File>
 				<File
