fixed compilation errors caused by r31 (Patch by CoMaNdO)

--- a/Client/Core/Client.Core.vcproj
+++ b/Client/Core/Client.Core.vcproj
@@ -913,11 +913,11 @@
 					Name="Threading"
 					>
 					<File
-						RelativePath="..\..\Shared\CMutex.h"
+						RelativePath="..\..\Shared\Threading\CMutex.h"
 						>
 					</File>
 					<File
-						RelativePath="..\..\Shared\CThread.h"
+						RelativePath="..\..\Shared\Threading\CThread.h"
 						>
 					</File>
 				</Filter>
@@ -1570,11 +1570,11 @@
 					Name="Threading"
 					>
 					<File
-						RelativePath="..\..\Shared\CMutex.cpp"
+						RelativePath="..\..\Shared\Threading\CMutex.cpp"
 						>
 					</File>
 					<File
-						RelativePath="..\..\Shared\CThread.cpp"
+						RelativePath="..\..\Shared\Threading\CThread.cpp"
 						>
 					</File>
 				</Filter>
