Cleaned up various pieces of code. Updated CCamera class and put it to use. Moved the custom checkpoint array to CPools. Added resetPlayerCamera native. Added CIVCam class. Moved some addresses to the COffsets class. Fixed some file headers and include paths. Added sq_push/getarg for pushing/popping CSquirrelArgument's onto/from a Squirrel stack. Added CSquirrelArgument::pushFromStack. Made use of the CSquirrelArgument(s) classes for returning arrays in scripting functions. Removed all pre-patch 5 native hashes. Removed CNetClient::GetSerial. Removed the name parameter from the mutex constructor.

--- a/Client/Core/Client.Core.vcproj
+++ b/Client/Core/Client.Core.vcproj
@@ -365,6 +365,10 @@
 					Name="IV"
 					>
 					<File
+						RelativePath=".\CIVCam.h"
+						>
+					</File>
+					<File
 						RelativePath=".\CIVCheckpoint.h"
 						>
 					</File>
@@ -654,6 +658,10 @@
 					</File>
 					<File
 						RelativePath=".\Natives\GUINatives.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Natives.h"
 						>
 					</File>
 					<File
@@ -1117,6 +1125,10 @@
 				<Filter
 					Name="IV"
 					>
+					<File
+						RelativePath=".\CIVCam.cpp"
+						>
+					</File>
 					<File
 						RelativePath=".\CIVCheckpoint.cpp"
 						>
