Cleaned up some code. Moved a load of addreses to the COffsets class. Added CIVWorld class. Added in vehicle triggers to the control pad sync. Added CIVVehicle::Set/GetGasPedal/BrakePedal/SteeringAngle. Removed the release hooks from some GUI classes to prevent issues (They will now behave as they did in 0.1 T3 R2 and below. The setRotation function is now a member of the clientside GUIElement class instead of just the clientside GUIImage class. Removed some testing code from the scoreboard.nut script. Fixed some file headers. Fixed full stop in the installer script. Added a mutex to the servers web server. Modified the server input thread handling. Modified control pad natives to use the CSquirrelArgument(s) classes. Removed the different custom/release network module and network versions. Fixed some include paths. Added PACKET_CHANNEL_SCRIPT packet channel.

--- a/Client/Core/Client.Core.vcproj
+++ b/Client/Core/Client.Core.vcproj
@@ -445,6 +445,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\CIVWorld.h"
+						>
+					</File>
+					<File
 						RelativePath=".\IVCommon.h"
 						>
 					</File>
@@ -1199,6 +1203,10 @@
 					</File>
 					<File
 						RelativePath=".\CIVWeather.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\CIVWorld.cpp"
 						>
 					</File>
 				</Filter>
