--- a/Client/Launcher/Client.Launcher.vcproj
+++ b/Client/Launcher/Client.Launcher.vcproj
@@ -290,7 +290,7 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\Shared\SharedUtil.h"
+					RelativePath="..\..\Shared\SharedUtility.h"
 					>
 				</File>
 			</Filter>
