Removed the draw enabled stuff from CChatWindow. Fixed toggling the input window with F6. Added CIVEvent class. Added CIVVehicle::SetCanBeVisiblyDamaged and CIVVehicle::CanBeVisiblyDamaged. Moved some addresses for the CPools class to the COffsets class. Fixed warping into vehicle with passenger sync to use the right seat instead of the drivers seat. Cleaned up some code.

--- a/Client/Core/Client.Core.vcproj
+++ b/Client/Core/Client.Core.vcproj
@@ -377,6 +377,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\CIVEvent.h"
+						>
+					</File>
+					<File
 						RelativePath=".\CIVModelInfo.h"
 						>
 					</File>
@@ -1139,6 +1143,10 @@
 					</File>
 					<File
 						RelativePath=".\CIVEntity.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\CIVEvent.cpp"
 						>
 					</File>
 					<File
