Cleaned up some code. Fixed cursor hook using _DEBUG instead of IVMP_DEBUG. Added CDebugView class for client debug view. Removed hazard light/headlight code from r105. Changed CNetworkPlayer::EnterVehicle to use enter vehicle task instead of scripting natives. Modified some server messages. Added server system natives to CSystemNatives. Incremented the network version.

--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -120,6 +120,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CDebugView.h" />
     <ClInclude Include="Commands.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="CChatWindow.h" />
@@ -293,6 +294,7 @@
     <ClInclude Include="CDirectInputHook.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CDebugView.cpp" />
     <ClCompile Include="Commands.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
