--- a/Client/Core/Client.Core.vcxproj.filters
+++ b/Client/Core/Client.Core.vcxproj.filters
@@ -333,9 +333,6 @@
     <ClInclude Include="CIVVehicle.h">
       <Filter>Header Files\Game\IV</Filter>
     </ClInclude>
-    <ClInclude Include="CIVWeapon.h">
-      <Filter>Header Files\Game\IV</Filter>
-    </ClInclude>
     <ClInclude Include="CIVWeaponInfo.h">
       <Filter>Header Files\Game\IV</Filter>
     </ClInclude>
@@ -693,6 +690,12 @@
     <ClInclude Include="CDebugView.h">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="AimSync.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="CIVPedWeaponSlot.h">
+      <Filter>Header Files\Game\IV</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp">
@@ -828,9 +831,6 @@
       <Filter>Source Files\Game\IV</Filter>
     </ClCompile>
     <ClCompile Include="CIVVehicle.cpp">
-      <Filter>Source Files\Game\IV</Filter>
-    </ClCompile>
-    <ClCompile Include="CIVWeapon.cpp">
       <Filter>Source Files\Game\IV</Filter>
     </ClCompile>
     <ClCompile Include="CIVWeaponInfo.cpp">
@@ -1117,6 +1117,12 @@
     </ClCompile>
     <ClCompile Include="CDebugView.cpp">
       <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="AimSync.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="CIVPedWeaponSlot.cpp">
+      <Filter>Source Files\Game\IV</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
